--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "scribe-plugin-noting": "^0.3.28",
     "scribe-plugin-sanitizer": "^0.1.10",
     "scribe-plugin-smart-lists": "^0.1.8",
-    "scribe-plugin-toolbar": "^1.0.0"
+    "scribe-plugin-toolbar": "^1.0.0",
+    "lodash-amd": "^3.5.0",
+    "lodash": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
