--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^2.9.0",
     "html-webpack-plugin": "^2.16.1",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
@@ -46,8 +47,7 @@
     "url": "git+https://github.com/javiercf/react-scribe.git"
   },
   "bugs": {
-    "url": "https://github.com/javiercf/react-scribe/issues",
-    "email": "javiercferrans@gmail.com"
+    "url": "https://github.com/javiercf/react-scribe/issues"
   },
   "keywords": [
     "react",
@@ -56,8 +56,5 @@
   ],
   "author": "javiercferrans@gmail.com",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/javiercf/react-scribe/issues"
-  },
   "homepage": "https://github.com/javiercf/react-scribe#readme"
 }
