--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
   },
   "keywords": [
     "react",
+    "react component",
+    "React",
+    "editor",
+    "content editor",
     "scribe.js",
     "WYSIWYG"
   ],
