--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-scribe",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "The Guardian's scribe.js react component",
-  "main": "src/index.js",
+  "main": "lib/react-scribe-editor.js",
   "dependencies": {
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
@@ -29,6 +29,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
     "extract-text-webpack-plugin": "^1.0.1",
