--- a/package.json
+++ b/package.json
@@ -65,5 +65,5 @@
   ],
   "author": "javiercferrans@gmail.com",
   "license": "MIT",
-  "homepage": "https://github.com/javiercf/react-scribe#readme"
+  "homepage": "http://javiercf.github.io/react-scribe"
 }
