--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.9.0",
-    "eslint-plugin-react": "^5.1.1",
+    "css-loader": "^0.25",
+    "eslint": "^3.0",
+    "eslint-plugin-react": "^6.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.16.1",
     "node-sass": "^3.7.0",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^4.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   },
   "scripts": {
     "test": "eslint ./src/*.js",
